<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/purchase_check"
        android:background="#FEDB75"
        android:gravity="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/purchase_popup"
        android:gravity="center"
        android:textSize="16dp"
        android:background="#CBC7BF"
        android:alpha="0.80"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FEDB75"
            android:text="@string/purchase_Y"
            android:onClick="purchase_ok"/>

        <android.widget.Button
            android:id="@+id/button2"
            android:text="@string/purchase_N"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FEDB75"/>
    </LinearLayout>
</LinearLayout>