<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivb"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logo2"
            android:contentDescription="@string/imageview_desc" />

        <TextView
            android:id="@+id/itb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/signup_page_text"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/itm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_text"
        android:textSize="15sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/inputid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputpwd"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_pwd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inputphone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inputnickname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_nickname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFDE69"
            android:text="@string/signup_text"
            android:layout_marginBottom="60dp"
            android:textColor="#FF000000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/loginbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@drawable/logingobtn"
            android:clickable="true"
            android:contentDescription="@string/imageview_desc"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

</LinearLayout>