<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivb"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logo2"
            android:contentDescription="@string/imageview_desc" />

        <TextView
            android:id="@+id/itb"
            android:layout_width="156dp"
            android:layout_height="33dp"
            android:layout_marginTop="55dp"
            android:text="@string/login_page_text"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/itm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_text"
        android:textSize="15sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/inputid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputpwd"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
        android:importantForAutofill="no" />

<!--비밀번호 변경 기능 삭제 예정    <TextView-->
<!--        android:id="@+id/pwdchange"-->
<!--        android:layout_width="340dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:clickable="true"-->
<!--        android:minHeight="48dp"-->
<!--        android:text="비밀번호 재설정"-->
<!--        android:textColor="#F0AE4B"-->
<!--        android:textSize="15dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/loginok1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFDE69"
            android:text="@string/login_text"
            android:layout_marginBottom="80dp"
            android:textColor="#FF000000"
            android:textSize="14sp" />


        <ImageView
            android:id="@+id/signbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signbtn"
            android:clickable="true"
            android:contentDescription="@string/imageview_desc"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

</LinearLayout>