<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <include  layout="@layout/toolbar1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/credithistorytitle"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
        <View
            android:id="@+id/empty_space"
            android:layout_width="match_parent"
            android:layout_height="70dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/creditTT"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="3"
                android:gravity="center"/>
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/creditCD"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="2"
                android:gravity="center"/>
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/creditIF"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="5"
                android:gravity="center"/>

        </LinearLayout>


<!--        <View-->
<!--            android:id="@+id/empty_space"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="70dp" />-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/listview1">
    </ListView>
    </LinearLayout>

</LinearLayout>